cabal-version:      3.4
name:               babynf
version:            0.1.0.0
synopsis:           Library for generating parsers from ABNF
-- description:
homepage:           brnrs.pl/projects/babynf
license:            MIT
license-file:       LICENSE
author:             Barnaba Piotrowski
maintainer:         barnaba.piotrowski@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Data.BAByNF.Util.Ascii,
        Data.BAByNF.Util.Stream,
        Data.BAByNF.ABNF.Grammar,
        Data.BAByNF.ABNF.Core,
        Data.BAByNF.ABNF.Rules,
        Data.BAByNF.Core.Repeat,
        Data.BAByNF.Core.Parseable,
        Data.BAByNF.Core.Tree,
        Data.BAByNF.Core.Ref,
        Data.BAByNF.Core.RefDict
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >= 4.9 && < 5,
        bytestring ^>= 0.11.4.0,
        attoparsec ^>= 0.14.4
    hs-source-dirs:   lib
    default-language: GHC2021

test-suite babynf-test
    import:           warnings
    default-language: GHC2021
    other-modules:
        Data.BAByNF.Test,
        Data.BAByNF.Util.Ascii.Test,
        Data.BAByNF.Test.Util,
        Data.BAByNF.ABNF.Grammar.Test,
        Data.BAByNF.ABNF.Rules.Test,
        Data.BAByNF.Parseable.Test
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        bytestring == 0.11.4.0,
        babynf,
        tasty == 1.4.3,
        tasty-hunit == 0.10.0.3,
        attoparsec == 0.14.4
